--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ resources/js/jquery/index.php
 
 # comodo image
 comodo_secure_seal_76x26_transp.png
+
+# robots.txt and sitemap
+robots.txt
+sitemap.xml
