Minor CSS updates

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ sitemap.xml
 
 # privacy policy
 privacy_policy.html
+
+# various images
+lottosim v2.png
+lottosim v2.snag
+
+# gitignore
+.gitignore
